5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1758_1185.log
== TEST (2019-05-28 12:48:41) 
-- CODE:
glicose = array(eval(input("qtd de glicose: ")))
i = 0
ocorr = 0
while(i<glicose):
	if(glicose>=99):
		ocorr = ocorr + 1
i = i + 1
print(ocorr)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    glicose = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:49:03) 
-- CODE:
from numpy import *
glicose = array(eval(input("qtd de glicose: ")))
i = 0
ocorr = 0
while(i<glicose):
	if(glicose>=99):
		ocorr = ocorr + 1
i = i + 1
print(ocorr)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:49:48) 
-- CODE:
from numpy import *
gli = array(eval(input("qtd de glicose: ")))
i = 0
ocorr = 0
while(i<gli):
	if(glicose>=99):
		ocorr = ocorr + 1
i = i + 1
print(ocorr)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:50:10) 
-- CODE:
from numpy import *
gli = array(eval(input("qtd de glicose: ")))
i = 0
ocorr = 0
while(i < gli):
	if(glicose>=99):
		ocorr = ocorr + 1
i = i + 1
print(ocorr)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:51:04) 
-- CODE:
from numpy import *
a = array(eval(input("qtd de glicose: ")))
i = 0
ocorr = 0
while(i < size(a)):
	if(glicose>=99):
		ocorr = ocorr + 1
i = i + 1
print(ocorr)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:51:20) 
-- CODE:
from numpy import *
a = array(eval(input("qtd de glicose: ")))
i = 0
ocorr = 0
while(i < size(a)):
	if(a>=99):
		ocorr = ocorr + 1
i = i + 1
print(ocorr)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:51:57) 
-- CODE:
from numpy import *
a = array(eval(input("qtd de glicose: ")))
i = 0
ocorr = 0
while(i < size(a)):
	if(a >=99):
		ocorr = ocorr + 1
		print(ocorr)
i = i + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:52:07) 
-- CODE:
from numpy import *
a = array(eval(input("qtd de glicose: ")))
i = 0
ocorr = 0
while(i < size(a)):
	if(a >=99):
		ocorr = ocorr + 1
		print(ocorr)
i = i + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:52:53) 
-- CODE:
from numpy import *
a = array(eval(input("qtd de glicose: ")))
i = 0
ocorr = 0
while(i < size(a)):
	if(size(a)>= 99):
		ocorr = ocorr + 1
		print(ocorr)
i = i + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:53:08) 
-- CODE:
from numpy import *
a = array(eval(input("qtd de glicose: ")))
i = 0
ocorr = 0
while(i < size(a)):
	if(size(i)>= 99):
		ocorr = ocorr + 1
		print(ocorr)
i = i + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:53:20) 
-- CODE:
from numpy import *
a = array(eval(input("qtd de glicose: ")))
i = 0
ocorr = 0
while(i < size(a)):
	if(size(a)>= 99):
		ocorr = ocorr + 1
		print(ocorr)
i = i + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:53:52) 
-- CODE:
from numpy import *
a = array(eval(input("qtd de glicose: ")))
i = 0
ocorr = 0
while(i < size(a)):
	if(size(a)>= 99):
		ocorr = ocorr + 1
		i = i + 1
	print(ocorr)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:54:41) 
-- CODE:
from numpy import *
a = array(eval(input("qtd de glicose: ")))
i = 0
ocorr = 0
while(i < size(a)):
	if(size(a)>= 99):
		ocorr = ocorr + 1
		i = i + 1
	print(ocorr)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:54:56) 
-- CODE:
from numpy import *
a = array(eval(input("qtd de glicose: ")))
i = 0
ocorr = 0
while(i < size(a)):
	if(size(a)>= 99):
		ocorr = ocorr + 1
		print(ocorr)
i = i + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:58:41) 
-- CODE:
from numpy import *
a = array(eval(input("qtd de glicose: ")))
i = 0
ocorr = 0
while(i < size(a)):
	if(size(a)>99):
		print(i)
		ocorr = ocorr + 1
	i = i + 1
print(ocorr)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:07:28) 
-- CODE:
from numpy import *
a = array(eval(input("qtd de glicose: ")))
i = 0
ocorr = 0
while(i < size(a)):
	if(a[i]>99):
		print(i)
		ocorr = ocorr + 1
	i = i + 1
print(ocorr)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:07:45) 
-- CODE:
from numpy import *
a = array(eval(input("qtd de glicose: ")))
i = 0
ocorr = 0
while(i < size(a)):
	if(a[i]>99):
		print(i)
		ocorr = ocorr + 1
	i = i + 1
print(ocorr)
-- EXECUTION TIME:
0.468446
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
